Closed
Bug 1793766
Opened 3 years ago
Closed 3 years ago
Perma build bustage /builds/worker/checkouts/gecko/dom/xul/XULPersist.cpp:261:32: error: use of undeclared identifier 'uri' when Gecko 107 switches to Late Beta on 2022-10-28
Categories
(Core :: XUL, defect)
Core
XUL
Tracking
()
VERIFIED
FIXED
107 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox105 | --- | unaffected |
| firefox106 | --- | unaffected |
| firefox107 | + | verified |
People
(Reporter: ctuns, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Central-as-beta simulation:
How to run these simulations:
Failure log
[task 2022-10-05T11:15:23.801Z] 11:15:23 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/angle/targets/preprocessor'
[task 2022-10-05T11:15:23.801Z] 11:15:23 INFO - gfx/angle/targets/preprocessor/preprocessor_lex_autogen.o
[task 2022-10-05T11:15:23.801Z] 11:15:23 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/angle/targets/preprocessor'
[task 2022-10-05T11:15:23.843Z] 11:15:23 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/xul'
[task 2022-10-05T11:15:23.847Z] 11:15:23 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-i686-linux-gnu -std=gnu++17 -m32 -o Unified_cpp_dom_xul0.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DDEBUG=1 -DMOZ_BREAK_XUL_OVERLAYS -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/xul -I/builds/worker/workspace/obj-build/dom/xul -I/builds/worker/checkouts/gecko/docshell/base -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/dom/xml -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/layout/xul/tree -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wno-ambiguous-reversed-operator -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-enum-float-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wno-error=deprecated-volatile -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -march=pentium-m -msse -msse2 -mfpmath=sse -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -Os -fno-omit-frame-pointer -funwind-tables -Werror -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_dom_xul0.o.pp Unified_cpp_dom_xul0.cpp
[task 2022-10-05T11:15:23.847Z] 11:15:23 INFO - In file included from Unified_cpp_dom_xul0.cpp:47:
[task 2022-10-05T11:15:23.847Z] 11:15:23 ERROR - /builds/worker/checkouts/gecko/dom/xul/XULPersist.cpp:261:32: error: use of undeclared identifier 'uri'
[task 2022-10-05T11:15:23.848Z] 11:15:23 INFO - rv = mLocalStore->GetValue(uri, aID, attrstr, value);
[task 2022-10-05T11:15:23.848Z] 11:15:23 INFO - ^
[task 2022-10-05T11:15:23.848Z] 11:15:23 INFO - 1 error generated.
[task 2022-10-05T11:15:23.848Z] 11:15:23 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:668: Unified_cpp_dom_xul0.o] Error 1
[task 2022-10-05T11:15:23.849Z] 11:15:23 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/xul'
[task 2022-10-05T11:15:23.849Z] 11:15:23 ERROR - gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: dom/xul/target-objects] Error 2
[task 2022-10-05T11:15:23.850Z] 11:15:23 INFO - gmake[3]: *** Waiting for unfinished jobs....
[task 2022-10-05T11:15:23.850Z] 11:15:23 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/angle/targets/preprocessor'
[task 2022-10-05T11:15:23.850Z] 11:15:23 INFO - gfx/angle/targets/preprocessor/preprocessor_tab_autogen.o
[task 2022-10-05T11:15:23.851Z] 11:15:23 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/angle/targets/preprocessor'
[task 2022-10-05T11:15:23.931Z] 11:15:23 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/angle/targets/angle_common'
[task 2022-10-05T11:15:23.936Z] 11:15:23 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-i686-linux-gnu -std=gnu++17 -m32 -o string_utils.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DDEBUG=1 -DANGLE_PLATFORM_EXPORT= -D__NDK_FPABI__= -DANGLE_SKIP_DXGI_1_2_CHECK -DANGLE_ENABLE_KEYEDMUTEX -DANGLE_TRANSLATOR_ESSL_ONLY '-DCR_CLANG_REVISION="llvmorg-13-init-9302-g897d7bce-1"' -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DNOMINMAX -DUNICODE -DWINVER=0x0A00 -D_ATL_NO_OPENGL -D_CRT_RAND_S -D_CRT_SECURE_NO_DEPRECATE -D_HAS_EXCEPTIONS=0 -D_SCL_SECURE_NO_DEPRECATE -D_SECURE_ATL -D_UNICODE -I/builds/worker/checkouts/gecko/gfx/angle/targets/angle_common -I/builds/worker/workspace/obj-build/gfx/angle/targets/angle_common -I/builds/worker/checkouts/gecko/gfx/angle/checkout/include -I/builds/worker/checkouts/gecko/gfx/angle/checkout/out/gen/angle -I/builds/worker/checkouts/gecko/gfx/angle/checkout/src -I/builds/worker/checkouts/gecko/gfx/angle/checkout/src/common/third_party/base -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wno-ambiguous-reversed-operator -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-enum-float-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wno-error=deprecated-volatile -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -march=pentium-m -msse -msse2 -mfpmath=sse -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -Os -fno-omit-frame-pointer -funwind-tables -Wno-final-dtor-non-final-class -Wno-implicit-const-int-float-conversion -Wno-range-loop-construct -msse2 -DWL_EGL_PLATFORM -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/string_utils.o.pp /builds/worker/checkouts/gecko/gfx/angle/checkout/src/common/string_utils.cpp
[task 2022-10-05T11:15:23.936Z] 11:15:23 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/angle/targets/angle_common'
[task 2022-10-05T11:15:23.938Z] 11:15:23 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/angle/targets/angle_common'
[task 2022-10-05T11:15:23.938Z] 11:15:23 INFO - gfx/angle/targets/angle_common/system_utils.o
[task 2022-10-05T11:15:23.938Z] 11:15:23 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/gfx/angle/targets/angle_common'
[task 2022-10-05T11:15:23.970Z] 11:15:23 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/gfx/angle/targets/translator'
Hi Emilio, can you please take a look at this? I think this might be caused by Bug 15232
Flags: needinfo?(emilio)
Updated•3 years ago
|
Keywords: regression
Updated•3 years ago
|
tracking-firefox107:
--- → +
| Assignee | ||
Comment 1•3 years ago
|
||
| Assignee | ||
Updated•3 years ago
|
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e10ee28192f3
Trivial fix to the release code for XULPersist.
Comment 3•3 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
Updated•3 years ago
|
Assignee: nobody → emilio
Comment 4•3 years ago
|
||
Verified fixed in today's central-as-beta simulation.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•