Bug 1793766 - Trivial fix to the release code for XULPersist.

Differential Revision: https://phabricator.services.mozilla.com/D158713